--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -8,10 +8,10 @@
 %%%%%%%%%%%%%
 
 The ability to correctly take measurements is an important part of human
-progress, both in terms of every day lives and the advancement of science.
+progress, both in terms of everyday lives and the advancement of science.
 Having the ability to take highly precise and accurate measurements is essential
-to maintaining safety, ensuring research is accurate, and providing a higher
-quality of life.
+to maintaining safety, ensuring the accuracy of research, and providing a
+higher quality of life.
 This is particularly critical in high-risk or high-cost scenarios, such as when
 human life is involved, or when the cost of using a sensor, taking a
 measurement, or running an experiment is particularly expensive.
@@ -78,7 +78,7 @@ However, simple proxy voting, where proxies cannot transfer their voting power,
 is sufficient for the research performed in this paper.
 
 Proxy voting has a number of advantages over direct voting.
-The most obvious advantage is it allows inactive voters to reduce the work
+The most obvious advantage is that it allows inactive voters to reduce the work
 required of them by choosing a proxy to perform the work of voting for them.
 Naturally, this is extremely useful when the cost of voting is high, such as
 when remaining educated on a topic is difficult or
@@ -96,7 +96,7 @@ However, this increase does not work in all circumstances and so proxy voting
 should be used after investigating the voting mechanism used and the potential
 pitfalls of that mechanism under proxy voting.
 
-Proxy voting also allows for agents uninformed about the issue at hand to
+Proxy voting also allows for agents that are uninformed about the issue at hand to
 delegate the voting power to a trusted expert.
 This is particularly useful for the purposes of this study.
 By using less accurate but cheaper measurements, the system can still yield
@@ -136,7 +136,7 @@ goes on to discuss how many of such proxies would be needed under random
 selection for a sufficiently accurate opinion to be made.
 These estimates range from 500 to 1000~\cite[para.~3.2]{Mueller1972}, and
 while this study uses preassigned proxies, these proxies will have random
-error in their estimations and so \etal{Mueller}'s estimates may come in to
+error in their estimations and so \etal{Mueller}'s estimates may come into
 play.
 However, a primary goal of this paper is to use far fewer measurements than the
 quoted 500, as that many measurements would likely be far more expensive than
@@ -159,7 +159,7 @@ agent could decide whether it served as a proxy or not.
 \etal{Cohensius}'s work serves as the basis of this study, which expands on
 the voting mechanisms used as well as introduces an additional type of
 mechanism: weighting mechanisms.
-This study also explores using finite voters instead of infinite as discussed
+This study also explores the use of finite voters instead of infinite as discussed
 in~\cite{Cohensius2017}, and explores the use of a set of proxies instead of
 employing random or strategic participation.
 While the use of finite voters in this case could be viewed as a two-layered
