--- a/content/chapter4-conclusions-and-further-work.tex
+++ b/content/chapter4-conclusions-and-further-work.tex
@@ -8,7 +8,7 @@
 Proxy vote systems as a method to increase system accuracy are situational tools.
 This technique is best used when one of the distributions of error is asymmetrical,
 and thus require the expected distribution of error to be known.
-However, under the correct circumstances a proxy vote system can be used to increase
+However, under the correct circumstances, a proxy vote system can be used to increase
 the accuracy of a system.
 Additionally, not all proxy vote systems are created equally and some combinations of
 voting and weighting mechanisms can be more effective than others.
@@ -22,7 +22,7 @@ As discussed in~\fullref{sec:how-many-agents}, this sweet spot appears to be bet
 10 and 15 proxies, with slightly more or less inactive agents.
 This may cause using such techniques to be too expensive if it is not possible to use
 sufficiently cheap proxies and inactive agents.
-However, if such agents are available the proxy vote or weightless average approach
+However, if such agents are available, the proxy vote or weightless average approach
 may be able to achieve better performance than alternative techniques that cost more
 than the combined sum of the agents used.
 
@@ -36,7 +36,7 @@ There are multiple ways in which the research performed in this study can be
 furthered and improved.
 Some obvious vectors for additional research include testing additional voting and
 weighting mechanisms.
-Additionally, allowing for multiple levels of expertise for both inactive and proxy
+Furthermore, allowing for multiple levels of expertise for both inactive and proxy
 agents could yield additional interesting results.
 
 As previously mentioned, proxy vote systems appear to work best when one error
