--- a/thesis.tex
+++ b/thesis.tex
@@ -100,7 +100,7 @@
 
 % Author and Title Information
 \author{Michael D. Hegerhorst}
-\title{An Exploration into using Proxy Votes to Increase System Accuracy}
+\title{An Exploration into the Use of Proxy Votes to Increase System Accuracy}
 
 % The Committee
 \majorprof{Vicki Allan, Ph.D.}
@@ -111,8 +111,8 @@
 
 % Graduate Dean
 % TODO: Add the name and title of the CS graduate dean
-\graddean{FIX ME}
-\deantitle{FIX ME}
+\graddean{FIX ME: CS GRADUATE DEAN}
+\deantitle{FIX ME: CS GRADUATE DEAN}
 
 % Degree Information
 % TODO: Should this be "Master of Science in Computer Science?"
