--- a/content/frontmatter/abstract.tex
+++ b/content/frontmatter/abstract.tex
@@ -10,24 +10,23 @@
 \begin{abstract}
 % A space is needed before the text starts so that the first paragraph
 % is indented properly. Max 350 words.
-% TODO
 
     A proxy voting system is a system in which agents are able to give their vote to
     other agents, known as proxies.
     These proxies vote on behalf of the agents who gave up their vote.
-    The idea behind this type of voting system is it allows agents without the time
+    The idea behind this type of voting system is to allow agents without the time
     or knowledge necessary to properly become informed on a topic to become
     inactive and pass their vote to a proxy that does.
-    The hope is this proxy will be an expert on the topic and so yield a more
-    informed end decision.
+    The hope is this proxy will be an expert on the topic and therefore will yield a
+    more informed end decision.
     This study looks into exploiting this proxy-inactive agent relationship in order
     to increase the accuracy of a measurement system while using less expensive forms
     of measurement.
-    Multiple types of voting, dubbed `voting mechanisms,' are identified and tested,
+    Multiple types of voting, dubbed `voting mechanisms,' are developed and tested,
     as well as several ways to allow inactive agents to divide their votes amongst
     proxies named `weighting mechanisms.'
-    While it is ultimately discovered that proxy vote systems should not be used in
-    all situations, this study is able to identify potential applications for
+    While it was ultimately discovered that proxy vote systems should not be used in
+    all situations, this study was able to identify potential applications for
     employing proxy vote systems as well as lay out potential avenues for additional
     research.
 
