Dr. Allan's notes

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -19,7 +19,7 @@ This paper explores the idea of using an adapted form of proxy voting, as
 described in~\cite[para.~1.3]{Miller1969}, as a way of taking multiple
 measurements to ensure accuracy while minimizing the cost of taking those
 measurements.
-
+\vicki{ In your introduction you need to introduce the problem you are trying to solve.  I wouldn’t jump to contributions immediately.}
 
 \section{Contribution}\label{sec:contribution}
 This study aims to explore the idea of using proxy voting as a technique to
@@ -72,6 +72,7 @@ In contrast, \textit{direct voting} requires each agent to vote on their own
 
 In some cases, the proxy is also able to transfer their vote, as well as all
 their weight, to yet another proxy.
+\vicki{You haven’t told us about voting weight.  If I can transfer my vote, why not weight? }
 This is known as \textit{liquid democracy}, which has its own challenges and
 advantages.
 However, simple proxy voting, where proxies cannot transfer their voting power,
@@ -88,6 +89,8 @@ must be overcome.
 In these cases, proxy voting allows voters to skip incurring the costs while
 still having their voice heard by allowing a proxy to perform the work once on
 behalf of all voting power transferred to it.
+\vicki{  But if I’m turning my vote to a proxy, h ow is my vote heard?  You could say you impacted the vote, but not that your vote was heard.  I don’t know how you can say the accuracy is increased, unless you know the proxy is smarter than you.
+How do the voters find  proxies and how do they decide who they trust?  The reader is unclear about the setup.}
 
 In addition to reducing individual agents' work, proxy voting also often has
 the effect of increasing the system welfare by increasing the accuracy of the
@@ -111,9 +114,11 @@ This can be problematic because the result of a system will be too biased
 towards the super voter.
 For this paper's purposes, a poor distribution of measurements may make one
 proxy a super voter and increase the error of the result.
+\vicki{here it appears you know absolute truth, and just want to assure the voting finds it.]
 
 
 \section{Related Work}\label{sec:related-work}
+\vicki{You need to cite previous work which motivates your approach.  It seems your previous work doesn't really motivate what you are doing.}
 Proxy voting and liquid democracy are well-discussed topics with a number of
 papers investigating their viability, advantages, and disadvantages.
 Many of these studies focus on political and societal uses for these techniques,
