--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -26,6 +26,7 @@ squared error for each voting mechanism.
     mechanisms on the left and candidate mechanisms on the right.}
     \label{fig:voting-mechanisms-comparison}
 \end{figure}
+\vicki{can't see this figure}
 
 This graph immediately tells us a few things.
 First, the squared error seems to be skewed, favoring numbers closer to 0.
@@ -80,6 +81,9 @@ Performing such a test results in a p-value of 0.0, far below the $\alpha$ of 0.
 Since candidate mechanisms can still be useful depending on the situation, both the
 best average mechanisms and the best candidate mechanisms will be identified.
 
+\vicki{Need to define U-tests.  
+
+It seems biased that everyone know the true value.  When you know the true value, lots of subtle ways of cheating could get you closer.  You only have a true test when the voters don't know the correct answer.}
 Further U-tests were performed, comparing each individual voting mechanism against
 every other individual mechanism.
 The results of this analysis can be found in
@@ -157,6 +161,7 @@ The p-values can be found in \autoref{fig:candidate-mechanisms-p-values}.
     beats the `to' mechanism.}
     \label{fig:candidate-mechanisms-p-values}
 \end{figure}
+\vicki{Can't see}
 
 While not as many candidate mechanism tests yielded p-values as small as those of
 the average mechanisms, there is still very strong evidence that each candidate
