--- a/content/frontmatter/publicabstract.tex
+++ b/content/frontmatter/publicabstract.tex
@@ -19,6 +19,7 @@ knows more about the topic, dubbed an expert.
 This study investigates the ability of proxy vote systems to be used as a way to make
 taking measurements more accurate by allowing less expensive measurements to pass their
 vote on to more expensive `expert' measurement techniques.
+[VHA:You talk about a more accurate way of taking measurements.  Voting isn’t normally about measurements, so we need clarification of the setup. ]
 
 
 \end{publicabstract}
