Edited footnote to be more cohesive

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -153,7 +153,7 @@ known as \textit{voting rules}.
 These are algorithms used to consolidate votes into the end result.
 The mechanisms discussed by \etal{Cohensius} include mean\footnote{An
 interesting aside, though not directly relevant to this
-study, is \etal{Cohensius} discovered the most extreme opinions will be
+study, is \etal{Cohensius} discovered that the most extreme opinions will be
 active under strategic participation when using a mean voting
 mechanism\cite[lemma~9]{Cohensius2017}.}
 and median rules in continuous spaces, as well as majority rule in
