Fixed some missing curly brackets

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -114,7 +114,8 @@ This can be problematic because the result of a system will be too biased
 towards the super voter.
 For this paper's purposes, a poor distribution of measurements may make one
 proxy a super voter and increase the error of the result.
-\vicki{here it appears you know absolute truth, and just want to assure the voting finds it.]
+\vicki{here it appears you know absolute truth, and just want to assure the voting
+finds it.}
 
 
 \section{Related Work}\label{sec:related-work}
