--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -109,9 +109,7 @@ Both setups will be examined in this study.
 Fortunately, the process of how to create the setups is identical.
 The only difference is which type of agent serves as proxies.
 \vicki{It isn't clear the setup.  So the untrained voters have information that is felt to be accurate (on average).  How is this true if they are untrained?  Can you give me a specific example?  Suppose I was trying to decide the best medication for covid.  My experts are medical professionals who have done studies.  Are my untrained voters ones who have had a small amount of experience, which may be helpful?
-
-Is the proxy the voter who actually votes?
-}
+Is the proxy the voter who actually votes?}
 \subsection{Criteria}\label{subsec:criteria}
 A system is only as good as its ability to perform.
 In order to gauge the ability or `goodness' of proxy voting as a form of
@@ -531,7 +529,7 @@ identify any differences.
 Once this has been done, additional, more in-depth tests will be performed to
 determine to what degree any proxy vote system improves upon simply averaging the
 agents' votes.
-\vicki{Averaging over the votes doesn't appear to be a reasonable comparison.  
+\vicki{Averaging over the votes doesn't appear to be a reasonable comparison.}
 
 As for the final question, the change in error will be graphed against the
 number of agents used to determine if there is any critical point where the benefit
