Overleaf should now compile

--- a/thesis.tex
+++ b/thesis.tex
@@ -89,7 +89,7 @@
 \usepackage{hhline}  % MDH: For double lines in tables
 
 % To control where figures are output
-\usepackage[outdir=./build/auxil/content/]{epstopdf}
+\usepackage{epstopdf}
 \pdfminorversion=7 % Because epstopdf outputs as version 1.7
 
 
